working model w/ new API!

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -98,9 +98,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "plot.array_plot(ca_eca.run_eca2(common.integer_digits_fn(2, 8)(30) , common.centered_init_k2_d1_fn(30)(10), 30)[1], 2)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,7 +177,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ca_d1_totalistic"
+    "import ca_d1_totalistic\n",
+    "\n",
+    "plot.array_plot(ca_eca.run_eca2(common.integer_digits_fn(2, 8)(30) , common.centered_init_k2_d1_fn(30)(10), 30)[1], 2)\n"
    ]
   },
   {
@@ -226,54 +233,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for state in enum():\n",
-    "    for rule in enum():\n",
-    "        evolutions = vmap(ca)(rule, vmap(simple_init)(state))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e = enum([('state', max_size, batch_size), ('rule', max_size, batch_size)], init={'state':0,'rule':10})\n",
-    "\n",
-    "{'state':[...], 'rule':iterable}\n",
-    "\n",
-    "for state_batch in e:\n",
-    "    state_batch['state'] # statebatch cannot be a generator\n",
-    "    for rule_batch in state_batch['rule']:\n",
-    "        f(rule_batch['state'], rule_batch['rule'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def enum(i_max, i_size, j_max, j_size):\n",
-    "    def enum_sub(i):\n",
-    "        for j in range(j_max):\n",
-    "            yield (i,j, nth_chunk(i_size, i), nth_chunk(j_size, j))\n",
-    "    for i in range(i_max):\n",
-    "        yield enum_sub(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -283,29 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(0, dtype=int32),\n",
-       " DeviceArray(1, dtype=int32))"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'common' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_19807/1491920320.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcentered_init_k2_d1_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'common' is not defined"
+     ]
     }
    ],
    "source": [
-    "np.unravel_index(1, (2,)*8)"
+    "common.centered_init_k2_d1_fn(9)"
    ]
   },
   {
@@ -374,6 +327,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ECA"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -395,12 +362,29 @@
     "\n",
     "    def bitcode(this, rule):\n",
     "        return integer_digits(rule, 2 8)\n",
-    "        \n",
-    "    \n",
     "    \n",
     "    def evolve(this, codes, states):\n",
     "        bitcodes = this.bitcode(codes)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OO strawman\n",
+    "\n",
+    "ca.states.random()\n",
+    "ca.rules()\n",
+    "ca.rules.canonical()\n",
+    "# what about rule subsets\n",
+    "\n",
+    "# class CAStateGenerator\n",
+    "ca.rules(opts) # should also take enum contruction params -- force batchsize spec?\n",
+    "# what if we don't know a-priori the size of these things?\n",
+    "ca.states(opts)"
    ]
   },
   {
@@ -418,26 +402,7 @@
     "states(ca)\n",
     "states_random(ca)\n",
     "\n",
-    "structured_states\n",
-    "random_states\n",
     "\n",
-    "# annoying mismatch when working in non-batch mode\n",
-    "# plugging in the output?\n",
-    "states.get([1])\n",
-    "\n",
-    "ca([30], states(ca).get())\n",
-    "\n",
-    "states[0] # (ids, values)\n",
-    "rules[0]  # ids?\n",
-    "random_rules[0] # (enum_ids, canonical_ids) \n",
-    "# dont think there is a use for the enum ids for random rules\n",
-    "# for states, need the enum id so we can recreate the state so we can re-run without\n",
-    "# having to save the whole state\n",
-    "# for rules case, already have the canonical id in hand\n",
-    "# might only be relevant if we want to offset by element #\n",
-    "\n",
-    "ca.evolve()\n",
-    "ca.evolve_batch()\n",
     "ca(rules, states) # much nicer\n",
     "# can add some reshape args to ca fn?\n",
     "\n",
@@ -460,7 +425,7 @@
     "\n",
     "# do we need to return indices? which ones?\n",
     "# for state, need to return the number in the enumeration, bc \"enumerate\" will just give the batch number\n",
-    "for seed, _ in states.random(batch_offset=10, batch_size=10, rng_seed=0):\n",
+    "for seed, _ in states.random(ca, batch_offset=10, batch_size=10, rng_seed=0):\n",
     "    for rule in ca.rules(batch_size=20, rng=0):\n",
     "\n",
     "\n",
@@ -478,10 +443,6 @@
     "\n",
     "\n",
     "# ^ have some need to get specific values in the given enumeration. the 657th seed or rule\n",
-    "random_seed.get([677,678]) # decoded state. implies need to return per-element ids from iterator\n",
-    "random_rule.get([677,678]) # canonical rule number.. dont think we need this since the \n",
-    "# enumeration fn will return the canonical rule number, and we only deal with offsets at the batch\n",
-    "# level\n",
     "\n",
     "ca = ca_1d_k2r1(\n",
     "    width=25,\n",
@@ -492,43 +453,7 @@
     "    # seed construction process needs to know details of the system -- so the args to the fn \n",
     "    # must be specific to the system\n",
     "             \n",
-    "\n",
-    "# seeds/rules \n",
-    "# iterable\n",
-    "# also, get nth & canonicalize\n",
-    "\n",
-    "seeds.__get_item__(0)\n",
-    "seeds(numbers) #-> representation\n",
-    "\n",
-    "\n",
-    "# get the nth rule intead of nth batch\n",
-    "ca.get(0,10)\n",
-    "ca.evolve()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# make a jax-based Enum\n",
-    "# is iterable'\n",
-    "# is indexable\n",
-    "# can start at offset\n",
-    "# has a length"
    ]
   },
   {
@@ -554,6 +479,18 @@
     "                raise IndexError()  \n",
     "        elif type(key) == slice:\n",
     "            return vmap(self.f)(np.arange(key.start, key.stop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_seed.get([677,678]) # decoded state. implies need to return per-element ids from iterator\n",
+    "random_rule.get([677,678]) # canonical rule number.. dont think we need this since the \n",
+    "# enumeration fn will return the canonical rule number, and we only deal with offsets at the batch\n",
+    "# level\n"
    ]
   },
   {
@@ -610,6 +547,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## unravel index as replacement for integer digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.unravel_index(1, (2,)*8)"
+   ]
   }
  ],
  "metadata": {
